# AERSP424_HW2

./: .vscode:tasks.json  CMakeLists.txt  HW2_Visualizer.h  hw2_submission  hw2_submission.cpp  q1.cpp  q2.cpp
hw2_submission.dSYM/Contents/: Info.plist
hw2_submission.dSYM/Contents/Resources/DWARF/: hw2_submission
lib/: SDL2maind.lib
